--- a/composer.json
+++ b/composer.json
@@ -33,14 +33,14 @@
     "php": ">=7.3",
     "ext-json": "*",
     "php-service-bus/transport-redis": "v3.3.*",
-    "amphp/redis": "^0.3"
+    "amphp/redis": "v0.3.*"
   },
   "require-dev": {
-    "php-service-bus/code-style-config": "^v0.1",
+    "php-service-bus/code-style-config": "v0.1.*",
     "symfony/dependency-injection": "v4.3.*",
-    "phpunit/phpunit": "^8",
-    "vimeo/psalm": "^v3",
-    "phpstan/phpstan": "0.11.*"
+    "phpunit/phpunit": "v8.3.*",
+    "vimeo/psalm": "v3.4.*",
+    "phpstan/phpstan": "v0.11.*"
   },
   "prefer-stable": true,
   "minimum-stability": "dev",
